--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2156,7 +2156,7 @@ button:active,
 }
 
 #nav ul li a span:before {
-    position: absolute;
+    /*position: absolute;*/
     left: 0;
     color: #41484c;
     text-align: center;
@@ -2171,7 +2171,7 @@ button:active,
 }
 
 #nav ul li a.active span:before {
-    color: #e27689;
+    color: #FF8C00;
 }
 
 /* Footer */
